# photo-deduplication

./: .gitignore  .gitmodules  .venv  CHANGELOG.md  LICENSE  Makefile  README.md  hasher.py  main.py  photo.py  pyproject.toml  requirements.txt  run.py
dedupe/: __init__.py  __main__.py  args.py  db.py  hasher.py  main.py  view.py
src/: db.py  dedupe.py  hasher.py  main.py  photo.py
src/apps/manager/: __init__.py  config.py  views.py
src/manager/: __init__.py  config.py
src/manager/www/: views.py
src/manager/www/templates/: index.html
